--- a/pseudoelements/index.html
+++ b/pseudoelements/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
   <ul>
-    <li><a href="">Google</a></li>
-    <li><a href="">Yandex</a></li>
-    <li><a href="">DuckDuckGo</a></li>
+    <li><a class="link-with-red-square" href="">Google</a></li>
+    <li><a class="link-with-red-square" href="">Yandex</a></li>
+    <li><a class="link-with-red-square" href="">DuckDuckGo</a></li>
+    <li><a class="link-with-red-square" href="">Yahoo</a></li>
+    <li><a class="link-with-red-square" href="">Bing</a></li>
   </ul>
 </body>
 </html>
